# PealerBeads

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
public/bg-removal-data/: resources.json
scripts/: download-models.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/components/: StatusBar.tsx  Toolbar.tsx  UnsavedDialog.tsx
src/components/Canvas/: EditorCanvas.tsx
src/components/Export/: BoardExportPanel.tsx  ExportPanel.tsx
src/components/ImageImport/: ImageImportModal.tsx
src/components/Palette/: ColorOptimizePanel.tsx  ColorPalette.tsx
src/components/Preview3D/: Preview3D.tsx
src/components/Sidebar/: LeftSidebar.tsx  RightSidebar.tsx
src/hooks/: useAutoSave.ts  useKeyboardShortcuts.ts  useWindowTitle.ts
src/lib/: backgroundRemoval.ts  boardExport.ts  canvasUtils.ts  colorOptimize.ts  colorSystem.ts  dithering.ts  exportUtils.ts  fileOperations.ts  floodFill.ts  pdfExport.ts  pixelEditing.ts  pixelation.ts  projectFile.ts
src/store/: useStore.ts
src/types/: index.ts
